<resources>
    <string name="app_name"></string>
    <string name="Calculadora">CALCULADORA</string>
    <string name="Insirir">INSIRA O VALOR</string>
    <string name="outro">OUTRO VALOR</string>
    <string name="Soma">SOMAR</string>
    <string name="Multiplica">MULTIPLCAR</string>
    <string name="subtração">SUBTRAIR</string>
    <string name="divisao">DIVIDIR</string>
    <string name="calcular">CALCULAR</string>
    <string name="resultado">RESULTADO</string>
    <style name="Theme.CalculadoraRevisão." parent="Theme.MaterialComponents.DayNight"></style>
</resources>